[gd_scene load_steps=5 format=2]

[ext_resource path="res://story/select/story_select.gd" type="Script" id=1]
[ext_resource path="res://ui/sprite/back.png" type="Texture" id=2]
[ext_resource path="res://ui/ui_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://level/select/background.jpg" type="Texture" id=5]

[node name="LevelSelect" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.40284, 1.40284 )
texture = ExtResource( 5 )
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -69.4119
margin_top = -42.7148
margin_right = 1988.59
margin_bottom = 1135.29
color = Color( 0.101563, 0.0825195, 0.0825195, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIRoot" type="HBoxContainer" parent="."]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.8
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UIRoot"]
margin_right = 108.0
margin_bottom = 842.0
alignment_vertical = 0

[node name="Settings" type="Button" parent="UIRoot/AspectRatioContainer"]
margin_right = 108.0
margin_bottom = 108.0
size_flags_horizontal = 9
size_flags_vertical = 9
icon = ExtResource( 2 )

[node name="StorySelectButtons" type="HBoxContainer" parent="UIRoot"]
margin_left = 112.0
margin_right = 1843.0
margin_bottom = 842.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="opening" type="MarginContainer" parent="UIRoot/StorySelectButtons"]
margin_right = 574.0
margin_bottom = 842.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="UIRoot/StorySelectButtons/opening"]
margin_left = 30.0
margin_right = 544.0
margin_bottom = 842.0
custom_fonts/font = ExtResource( 3 )
text = "opening"

[node name="level1" type="MarginContainer" parent="UIRoot/StorySelectButtons"]
margin_left = 578.0
margin_right = 1152.0
margin_bottom = 842.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="UIRoot/StorySelectButtons/level1"]
margin_left = 30.0
margin_right = 544.0
margin_bottom = 842.0
custom_fonts/font = ExtResource( 3 )
text = "Level1"

[node name="level2" type="MarginContainer" parent="UIRoot/StorySelectButtons"]
margin_left = 1156.0
margin_right = 1731.0
margin_bottom = 842.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="UIRoot/StorySelectButtons/level2"]
margin_left = 30.0
margin_right = 545.0
margin_bottom = 842.0
custom_fonts/font = ExtResource( 3 )
text = "level2"

[connection signal="pressed" from="UIRoot/StorySelectButtons/opening/button" to="." method="load_level1"]
